# ulib

./: .gitignore  Doxyfile  LICENSE.txt  Makefile.freebsd  Makefile.freebsd.in  Makefile.linux.in  Makefile.osx.in  README.macosx.txt  README.md  UMHTTPTask_ProcessRequest.h  UMHTTPTask_ProcessRequest.m  codesign_environment.sh  configure  configure.ac  configure.in  configure~  distro.sh  installer_requirements.plist  lib_symlink_tool.sh  make_buildnr.sh  make_pkg.sh  make_version  testcase1.m  ulib.control.in  ulib.pc  ulib.pc.in  ulibios copy-Info.plist  ulibios copy2-Info.plist  version.h
Classes/: UMAssert.h  UMRegex.h  UMRegex.m  UMRegexMatch.h  UMRegexMatch.m  UniversalTokenizer.h  path.h.in  ulib.h  ulib.m  ulib_config.h  ulib_config.h.in
Classes/UniversalConfig/: NSDictionary+UniversalConfig.h  NSDictionary+UniversalConfig.m  UMConfig.h  UMConfig.m  UMConfigGroup.h  UMConfigGroup.m  UMConfigLocation.h  UMConfigLocation.m  UMConfigParsedLine.h  UMConfigParsedLine.m  UniversalConfig.h
Classes/UniversalHTTP/: NSData+UMHTTP.h  NSData+UMHTTP.m  NSDictionary+UMHTTP.h  NSDictionary+UMHTTP.m  NSMutableArray+UMHTTP.h  NSMutableArray+UMHTTP.m  NSMutableData+UMHTTP.h  NSMutableData+UMHTTP.m  NSMutableString+UMHTTP.h  NSMutableString+UMHTTP.m  NSString+UMHTTP.h  NSString+UMHTTP.m  UMHTTP2Connection.h  UMHTTP2Connection.m  UMHTTP2Frame.h  UMHTTP2Frame.m  UMHTTP2Server.h  UMHTTP2Server.m  UMHTTP2Session.h  UMHTTP2Session.m  UMHTTPAuthenticationStatus.h  UMHTTPClient.h  UMHTTPClient.m  UMHTTPClientRequest.h  UMHTTPClientRequest.m  UMHTTPConnection.h  UMHTTPConnection.m  UMHTTPCookie.h  UMHTTPCookie.m  UMHTTPPageCache.h  UMHTTPPageCache.m  UMHTTPPageHandler.h  UMHTTPPageHandler.m  UMHTTPPageRef.h  UMHTTPPageRef.m  UMHTTPRequest.h  UMHTTPRequest.m  UMHTTPResponseCode.h  UMHTTPSServer.h  UMHTTPSServer.m  (+12 more)
Classes/UniversalJson/: NSArray+UMJson.h  NSArray+UMJson.m  NSDictionary+UMJson.h  NSDictionary+UMJson.m  NSString+UMJson.h  NSString+UMJson.m  UMJsonParser.h  UMJsonParser.m  UMJsonStreamParser.h  UMJsonStreamParser.m  UMJsonStreamParserAccumulator.h  UMJsonStreamParserAccumulator.m  UMJsonStreamParserAdapter.h  UMJsonStreamParserAdapter.m  UMJsonStreamParserState.h  UMJsonStreamParserState.m  UMJsonStreamWriter.h  UMJsonStreamWriter.m  UMJsonStreamWriterAccumulator.h  UMJsonStreamWriterAccumulator.m  UMJsonStreamWriterState.h  UMJsonStreamWriterState.m  UMJsonTokeniser.h  UMJsonTokeniser.m  UMJsonUTF8Stream.h  UMJsonUTF8Stream.m  UMJsonWriter.h  UMJsonWriter.m  UniversalJson.h
Classes/UniversalLayers/: UMLayer.h  UMLayer.m  UMLayerTask.h  UMLayerTask.m  UMLayerUserProtocol.h  UniversalLayers.h
Classes/UniversalLog/: NSData+UMLog.h  NSData+UMLog.m  UMLogBuffered.h  UMLogBuffered.m  UMLogConsole.h  UMLogConsole.m  UMLogDestination.h  UMLogDestination.m  UMLogEntry.h  UMLogEntry.m  UMLogFeed.h  UMLogFeed.m  UMLogFile.h  UMLogFile.m  UMLogHandler.h  UMLogHandler.m  UMLogLevel.h  (+2 more)
SupportingFiles/: ulib-Prefix.pch  ulib-macos-info.plist  ulib-tvos-info.plist  ulib-watchos-info.plist
debian/: ulib.control  ulib.control.in
dependencies/: BUILD-OPENSSL-3.2.txt
doc/: README-Debian10-buster.txt  README-Debian11-bullseye.txt  README-Debian12-bookworm.txt  README-Debian8.txt  README-Debian9-strech.txt  README-Debian9-stretch.txt  README-Frebsd12.txt  README-Frebsd13.txt  README-FreeBSD12.txt  README-FreeBSD13.txt  README-LINUX.md  README-LINUX.txt  README-Ubuntu-16.txt  README-Ubuntu-18.txt  README-Ubuntu-22.txt  README-centos7.txt
html/: annotated.html  classes.html  config_8h_source.html  dir_0c68614ac8d8401edbf4146ded722294.html  dir_1027b57c1425fb9084e00053c6122907.html  dir_1e97de4c5d06ed38ec37097a3f11b539.html  dir_1f2e18490436c26813109c1cbab60071.html  dir_394f4001a62593c3aea973545ab391a6.html  dir_6ef6a5691368b73208bb96ba03df4aa9.html  dir_780fbb71f8e818657ac6636af7c7fae7.html  dir_789fd018440044ad9a011cf8a7847ea9.html  dir_a0f617e89306085812be8efc0f3d126b.html  dir_cb243af4158a582fed9a5a60cb6f9ce8.html  dir_cf5b8c525dd979ce0e11593ab4dc9724.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  md__r_e_a_d_m_e.html  menudata.js  pages.html  version_8h_source.html
redhat/: DEPENDENCIES  README
ulib/: NSArray+HierarchicalDescription.m  NSArray+UMJson.m  NSArray+ulib.h  NSArray+ulib.m  NSData+HierarchicalDescription.h  NSData+HierarchicalDescription.m  NSData+UMHTTP.m  NSData+UMLog.m  NSData+UMSocket.h  NSData+UMSocket.m  NSData+UniversalObject.m  NSData+ulib.h  NSData+ulib.m  NSDate+stringFunctions.m  NSDate+ulib.h  NSDate+ulib.m  NSDictionary+HierarchicalDescription.m  NSDictionary+UMHTTP.m  NSDictionary+UMJson.m  NSDictionary+UniversalConfig.m  NSDictionary+ulib.h  NSDictionary+ulib.m  NSMutableArray+UMHTTP.h  NSMutableArray+UMHTTP.m  NSMutableArray+ulib.h  NSMutableArray+ulib.m  NSMutableData+UMHTTP.m  NSMutableData+ulib.h  NSMutableData+ulib.m  NSMutableString+UMHTTP.m  NSMutableString+ulib.h  NSMutableString+ulib.m  NSNumber+HierarchicalDescription.h  NSNumber+HierarchicalDescription.m  NSNumber+ulib.h  NSNumber+ulib.m  NSObject+HierarchicalDescription.h  NSObject+HierarchicalDescription.m  NSObject+ulib.h  NSObject+ulib.m  (+238 more)
ulib.xcodeproj/: project.pbxproj
ulibTests/: NSMutableData+UMTestString.h  NSMutableData+UMTestString.m  NSMutableString+UMTestString.h  NSMutableString+UMTestString.m  TestUMCrypto.h  TestUMCrypto.m  TestUMDate.h  TestUMDate.m  TestUMHTTPServer.h  TestUMHTTPServer.m  TestUMLogFeed.h  TestUMLogFeed.m  TestUMPool.h  TestUMPool.m  TestUMQueue.h  TestUMQueue.m  TestUmLogFile.h  TestUmLogFile.m  TestUmLogHandler.h  TestUmLogHandler.m  TestUmSleeper.h  TestUmSleeper.m  TestUmSocket.h  TestUmSocket.m  UMGroup.h  UMGroup.m  UMTestCase.h  UMTestCase.m  UMTestCaseBinaryIP.h  UMTestCaseBinaryIP.m  UMTestDelegate.h  UMTestDelegate.m  UMTestHTTP.h  UMTestHTTP.m  UMTestHTTPClient.h  UMTestHTTPClient.m  UMTestHTTPEntity.h  UMTestHTTPEntity.m  config-syntax-definition.plist  config-test.conf  (+22 more)
ulibTestsLinux/: check_crypto.sh  check_socket.sh  run-checks  test_crypto.h  test_crypto.m  test_socket.h  test_socket.m
(+8998 files in other folders)
